crates/metaltile-codegen/tests/snapshots/msl_snapshots__bf16_param_only_native_emits_native_type.snap
---
source: crates/metaltile-codegen/tests/msl_snapshots.rs
expression: msl
---
// Generated by MetalTile
#include <metal_stdlib>
using namespace metal;

kernel void bf16_param(
    const device bfloat *a [[buffer(0)]],
    uint tid [[thread_position_in_grid]]
) {
}
