crates/metaltile-codegen/tests/snapshots/msl_snapshots__cast_chain_bf16_compat.snap
---
source: crates/metaltile-codegen/tests/msl_snapshots.rs
expression: msl
---
// Generated by MetalTile
#include <metal_stdlib>
using namespace metal;

kernel void cast_chain(
    const device float *x [[buffer(0)]],
    device float *out [[buffer(1)]],
    uint tid [[thread_position_in_grid]]
) {
    uint v0 = tid;
    auto v1 = x[v0];
    auto v4 = static_cast<float>(bfloat16_t(static_cast<half>(v1)));
    out[v0] = v4;
}
