crates/metaltile-codegen/tests/snapshots/msl_snapshots__reduction_sum_snapshot_small_tpg.snap
---
source: crates/metaltile-codegen/tests/msl_snapshots.rs
assertion_line: 428
expression: msl
---
// Generated by MetalTile
#include <metal_stdlib>
using namespace metal;

kernel void reduction_smoke(
    const device float *x [[buffer(0)]],
    device float *out [[buffer(1)]],
    uint3 _tid3  [[thread_position_in_threadgroup]],
    uint3 _tgid3 [[threadgroup_position_in_grid]],
    uint3 _lsize3 [[threads_per_threadgroup]],
    uint simd_lane [[thread_index_in_simdgroup]],
    uint simd_group [[simdgroup_index_in_threadgroup]]
) {
    uint tid    = _tid3.x;
    uint tgid_x = _tgid3.x;
    uint lsize  = _lsize3.x;
    uint n_simd = lsize / 32u;
    uint v0 = tgid_x;
    auto v1 = x[v0];
    float v2 = simd_sum(float(v1));
    out[v0] = v2;
}
